@@ -1,3 +1,7 @@
+2010-02-04  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed display of \anticommutator.
+
 2010-02-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Fixed cadabra-41: @collect_factors does not take commutativity
